# onvif-rs

./: Cargo.toml  conf.yaml
discover/: Cargo.toml
discover/src/: client.rs  main.rs
